--- a/ui/pantry-ui/src/app/components/meal-plan/meal-plan.component.html
+++ b/ui/pantry-ui/src/app/components/meal-plan/meal-plan.component.html
@@ -66,7 +66,8 @@
                                         style="font-size: 14px; width: 14px; height: 14px; vertical-align: middle; margin-right: 4px;">content_cut</mat-icon>
                                     <span>Requires prep</span>
                                 </div>
-                                <div *ngIf="plan.product" (click)="$event.stopPropagation(); editQuantity(plan)"
+                                <div *ngIf="plan.product || plan.isLeftover"
+                                    (click)="$event.stopPropagation(); editQuantity(plan)"
                                     class="quantity-badge clickable-badge" matTooltip="Edit Quantity">
                                     x{{ plan.quantity || 1 }}
                                 </div>
