--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -9,6 +9,7 @@
     <mat-divider></mat-divider>
 
     <a mat-list-item [routerLink]="['/barcode/scanner']" (click)="onLinkClick()">Barcode Scanner</a>
+    <a mat-list-item [routerLink]="['/audit']" (click)="onLinkClick()">Audit Location</a>
     <a mat-list-item [routerLink]="['/kiosk-mode']" (click)="onLinkClick()">Kiosk Mode</a>
     <a mat-list-item [routerLink]="['/gemini-chat']" (click)="onLinkClick()">Smart Chat</a>
     <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
@@ -19,6 +20,7 @@
     <a mat-list-item [routerLink]="['/settings/family']" (click)="onLinkClick()">Family Preferences</a>
     <a mat-list-item [routerLink]="['/settings/tags']" (click)="onLinkClick()">Tag Editor</a>
     <a mat-list-item [routerLink]="['/settings/locations']" (click)="onLinkClick()">Locations</a>
+    <a mat-list-item [routerLink]="['/hardware']" (click)="onLinkClick()">Hardware</a>
     <a mat-list-item [routerLink]="['/diagnostics']" (click)="onLinkClick()">Diagnostics</a>
     <a mat-list-item [routerLink]="['/timers']" (click)="onLinkClick()">Timers</a>
     <a mat-list-item [routerLink]="['/settings']" (click)="onLinkClick()">Settings</a>
