--- a/ui/pantry-ui/src/app/components/chat-interface/chat-interface.component.html
+++ b/ui/pantry-ui/src/app/components/chat-interface/chat-interface.component.html
@@ -38,21 +38,26 @@
             </div>
         </div>
 
-        <!-- Loading Indicator -->
-        <div *ngIf="isLoading" class="message bot-message">
-            <span class="sender-label">Smart Chat</span>
-            <div class="typing-indicator">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-            </div>
-        </div>
+        <span class="message-timestamp" *ngIf="message.timestamp">
+            {{ message.timestamp | date:'shortTime' }} {{ message.timestamp | date:'MM/dd' }}
+        </span>
     </div>
 
-    <!-- Input Area -->
-    <div class="input-area">
-        <app-smart-chat-input [placeholder]="placeholder" [disabled]="isLoading" [enableAudio]="enableAudio"
-            [autoSendAudio]="autoSendAudio" (send)="handleSend($event)">
-        </app-smart-chat-input>
+    <!-- Loading Indicator -->
+    <div *ngIf="isLoading" class="message bot-message">
+        <span class="sender-label">Smart Chat</span>
+        <div class="typing-indicator">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     </div>
+</div>
+
+<!-- Input Area -->
+<div class="input-area">
+    <app-smart-chat-input [placeholder]="placeholder" [disabled]="isLoading" [enableAudio]="enableAudio"
+        [autoSendAudio]="autoSendAudio" (send)="handleSend($event)">
+    </app-smart-chat-input>
+</div>
 </div>
